package kfiry.academic_system.repositories;

import org.springframework.data.mongodb.repository.MongoRepository;
import org.springframework.stereotype.Repository;

import kfiry.academic_system.datamodels.Lecturer;

@Repository
public interface LecturerRepository extends MongoRepository<Lecturer,String>{
    Lecturer findByID(String ID);
}
